--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,12 +118,10 @@
      "text": [
       "torch.Size([64, 3, 224, 224])\n",
       "torch.Size([64])\n",
-      "tensor([ 38,  24,  90,  90,  51,  81,  41,  39,  84,  73,  43,  48,\n",
-      "         92,  92,  79,  10,  53,  66,  41,  97,  74,  43,  62,  75,\n",
-      "         86,  96,  12,   9,  18,  61,  78,  46,  80,  40,  64,  26,\n",
-      "         89,  80,  60,  66,  89,  74,  45,  15,  41,  98,  56,  93,\n",
-      "         84,  78,  40,  31,  21,  62,  77,  20,  37,  78,  80,  76,\n",
-      "         30,  17,  59,  89])\n"
+      "tensor([ 7, 75, 41, 10, 77, 36, 55, 21, 32, 47, 85,  1, 43, 83, 77, 49, 60, 90,\n",
+      "        76, 26, 52, 89, 83, 32, 89, 48, 54, 97, 94, 50, 32, 26, 54, 13, 56, 34,\n",
+      "        90, 62, 23, 93, 77, 62, 35, 20, 36, 95, 49, 46, 95,  1, 43, 25, 10, 48,\n",
+      "        40, 77, 85, 33, 27, 40, 93, 63,  5, 73])\n"
      ]
     }
    ],
@@ -145,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -194,16 +192,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading: \"https://download.pytorch.org/models/vgg16-397923af.pth\" to /root/.torch/models/vgg16-397923af.pth\n",
-      "100%|██████████| 553433881/553433881 [00:10<00:00, 53881983.14it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO: Build and train your network\n",
     "model = models.vgg16(pretrained=True)\n",
@@ -475,11 +464,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Save the checkpoint \n",
+    "# : Save the checkpoint \n",
     "path = 'vgg16_flowers.pth'\n",
     "torch.save(model.state_dict(), path)"
    ]
@@ -495,11 +484,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Write a function that loads a checkpoint and rebuilds the model\n",
+    "# : Write a function that loads a checkpoint and rebuilds the model\n",
     "def load_vgg16_flowers(path):\n",
     "    model = models.vgg16()\n",
     "    classifier = nn.Sequential(OrderedDict([\n",
@@ -629,7 +618,7 @@
     "    ''' Predict the class (or classes) of an image using a trained deep learning model.\n",
     "    '''\n",
     "    \n",
-    "    # TODO: Implement the code to predict the class from an image file\n",
+    "    # : Implement the code to predict the class from an image file\n",
     "    input_tensor = process_image(Image.open(image_path))\n",
     "    input_batch = input_tensor.unsqueeze(0)\n",
     "\n",
